Bug 825526: Improve lifetime control of SourceMediaStream in gUM r=anant